test/classes/initializers/errors/missingType.chpl
proc R.init(arg: int) { } // error: 'R' undeclared (first use this function)
