test/classes/initializers/errors/missingType.good
missingType.chpl:1: In initializer:
missingType.chpl:1: error: 'R' undeclared (first use this function)
